After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781292 - Can't export recipes
Can't export recipes
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
1.0.x
Other Linux
: Normal major
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-04-13 22:00 UTC by Sylvia Sanchez
Modified: 2017-04-16 04:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot with the error message (173.05 KB, image/jpeg)
2017-04-13 22:00 UTC, Sylvia Sanchez
Details

Description Sylvia Sanchez 2017-04-13 22:00:21 UTC
Created attachment 349842 [details]
Screenshot with the error message

When I tried to export a recipe, it failed to send saying it can't find certain file  (that actually exists), as shown in the screenshot attached.
Fedora 25 Workstation.