Fix export or recipes with local images

We were using the wrong path for images that have been
locally added. These are not in cache dir, but in data dir.

https://bugzilla.gnome.org/show_bug.cgi?id=781292